# Auralis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/auralis/: __init__.py  app.py  config.py  demo.md  mailer.py  mas.py  models.py  notify.py
src/auralis/agents/: prompts.py  steps.py
src/auralis/api/: app.py  ui.py
src/auralis/crm/: base.py  hubspot.py  sheets.py
src/auralis/models/: models.py
src/auralis/pipeline/: runner.py
src/auralis/store/: db.py
src/auralis/tools/: tools.py
tests/: test_api.py  test_pipeline.py
