[project]
name = "auralis"
version = "1.0.0"
description = "Post-call sales intelligence: transcript in — summary, insights, follow-up draft, and CRM record out."
readme = "README.md"
authors = [
    { name = "Abdullah-1121", email = "muhammad11abdullah21@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "gspread>=6.2.1",
    "openai-agents>=0.1.0",
    "pydantic-settings>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auralis"]
